--- a/.github/workflows/basic_token_validation.yml
+++ b/.github/workflows/basic_token_validation.yml
@@ -11,8 +11,8 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build_and_deploy_s3:
+  # This workflow contains a single job called "execute"
+  execute:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
